--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Learning React from Akshay saini",
   
   "scripts": {
+    "start":"parcel index.html",
+    "build":"parcel build index.html",
     "test": "jest"
   },
   "repository": {
